--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,4 +1,4 @@
-name: Node CI
+name: build
 on: [push]
 jobs:
   build:
@@ -6,15 +6,11 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v1
-    - name: Use Node.js 12.x
+    - name: Use Node.js 12
       uses: actions/setup-node@v1
       with:
-        node-version: 12.x
-    - name: Install and build
-      run: |
-        npm ci
-        npm run build
-    - name: Lint
-      run: npm run lint
-    - name: Test
-      run: npm run test
+        node-version: 12
+    - run: npm ci
+    - run: npm run lint
+    - run: npm run build
+    - run: npm run test
